Use of ProcessBuilder to execute R script to prevent hangs.